--- a/public/stylesheets/main-content.less
+++ b/public/stylesheets/main-content.less
@@ -38,6 +38,7 @@
   }
 
   #page-title {
+    margin-top: @grid-gutter-width / 2;
     margin-bottom: @line-height-computed;
   }
 
